--- a/main.css
+++ b/main.css
@@ -1,17 +1,20 @@
 * {
-    font-family: 'Signika Negative', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Signika Negative", Tahoma, Geneva, Verdana, sans-serif;
     scroll-padding-top: var(--navbar-height);
     margin: 0px;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 
-body {
-    overflow-x: hidden;
-    width: 100vw;
+body,
+html {
+     overflow-x: hidden;
+    max-width: 100%;
+    /* max-height: 100dvh; */
 }
 
-.unselectable, img {
+.unselectable,
+img {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -25,35 +28,35 @@ button {
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--primary); 
+    background: var(--primary);
     border-radius: 10px;
 }
 
 /* elevated button */
 
-.elevated-button-primary, .elevated-button-secondary {
+.elevated-button-primary,
+.elevated-button-secondary {
     width: 150px;
     height: 50px;
-    box-shadow: 4px 0px 13px 0px var(--text);;
+    box-shadow: 4px 0px 13px 0px var(--text);
     border: 0;
     border-radius: 25px;
     padding: 15px 0px;
     margin: 10px;
 
-    content: '';
+    content: "";
     display: inline-block;
-    background-size: auto 40px; 
+    background-size: auto 40px;
     background-repeat: no-repeat;
-    background-position: 5% ;
+    background-position: 5%;
     text-decoration: none;
     font-size: 1.2rem;
     text-align: center;
-
 }
 
 .elevated-button-primary {
@@ -70,17 +73,17 @@ button {
     width: 150px;
     height: 50px;
     background-color: #2b3137;
-    box-shadow: 4px 0px 13px 0px var(--text);;
+    box-shadow: 4px 0px 13px 0px var(--text);
     border: 0;
     border-radius: 25px;
     padding: 15px 0px;
     margin: 10px;
 
-    content: '';
+    content: "";
     display: inline-block;
-    background-size: auto 40px; 
+    background-size: auto 40px;
     background-repeat: no-repeat;
-    background-position: 5% ;
+    background-position: 5%;
     text-decoration: none;
 
     background-image: url(/images/common/logos/github.png);
